@@ -1,3 +1,12 @@
+Mon May  2 13:45:54 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* module/sul.s (alloc_proc): Shrink the stored pid to 30-bits
+	to work around applications that test for fork failure by testing
+	(pid < 0).
+	(sul_fork): Expand/shrink pid to/from 32-bits where necessary.
+	(sul_exec): Likewise.
+	(sul_exit): Likewise.
+
 Sun May  1 15:54:36 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* module/sul.s (help): Move tab char onto seperate line to aid
